[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution"
version = "0.1.0"
authors = [
]
description = "An evolution game."
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pygame",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Github = "https://github.com/MBSck/Evolution"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "tests*",
    "doc*",
]
namespaces = false

[tool.black]
line-length = 90

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
